--- a/jupyter/matrix.ipynb
+++ b/jupyter/matrix.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,8 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -48,7 +50,7 @@
        "(2, 2)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +70,7 @@
        "(2, 4)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +90,7 @@
        "(1, 2)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +129,7 @@
        "(1,)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +149,7 @@
        "(1,)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +189,7 @@
        "(4, 3)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +209,7 @@
        "(3,)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +232,7 @@
        "       [ 9, 11, 13]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -250,13 +252,13 @@
        "array([ 5, 14, 23, 32])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.dot(matrix_1,matrix_2)#행렬 곱도 된다"
+    "np.dot(matrix_1,matrix_2)#행렬 곱도 된다  "
    ]
   },
   {
@@ -268,16 +270,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.arange(0, 32).reshape(4,2,4)# 4 / 2열 / 4행"
+    "A = np.arange(0, 32).reshape(4,2,4)# 4 / 2행 / 5열"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +298,7 @@
        "        [28, 29, 30, 31]]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +318,7 @@
        "496"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +339,7 @@
        "       [64, 68, 72, 76]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +362,7 @@
        "       [52, 54, 56, 58]])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +385,7 @@
        "       [102, 118]])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +422,7 @@
        "2.718281828459045"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -478,18 +480,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "def step(x):\n",
-    "    bool_data = x.astype(np.float) > 0\n",
+    "    bool_data = x > 0\n",
     "    return bool_data.astype(np.int)#bool data를 int 정수 형태로 변환 후 return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -509,19 +511,19 @@
        "        True])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x = np.arange(-5.0, 5.0, 0.1)# -5.0 ~ 5.0 까지 배열 생성\n",
-    "x.astype(np.float) > 0 #bool type 정수로 변환 0보다 작다면 False / 0이상은 True"
+    "x > 0 #bool type 정수로 변환 0보다 작다면 False / 0이상은 True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +536,7 @@
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +602,7 @@
        "       [0, 3, 4, 7]])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -621,27 +623,27 @@
        "       [-2,  1,  2,  5]])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input_sigma + input_b#브로드 캐스트에 의하여 모든 배열에 스칼라 b값이 적용"
+    "input_sigma + -2#브로드 캐스트에 의하여 모든 배열에 스칼라 b값이 적용"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hidden_x = (inpusigmoidt_sigma + input_b)"
+    "hidden_x = sigmoid(input_sigma + input_b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +653,7 @@
        "       [0.11920292, 0.73105858, 0.88079708, 0.99330715]])"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +689,7 @@
        "array([[1.31123214, 5.73105858, 7.78478247, 9.61513579]])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +709,7 @@
        "array([[-0.68876786,  3.73105858,  5.78478247,  7.61513579]])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +731,7 @@
        "array([[0.33430723, 0.97659354, 0.99693544, 0.99950731]])"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +752,7 @@
        "array([[0, 1, 1, 1]])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,6 +761,34 @@
     "#계단 함수로 계산을 했을경우\n",
     "step(h) # 0 / 1 / 1 / 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
